# escpos_webserver

./: API_DOCUMENTATION.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
components/esp_escpos/: CMakeLists.txt  IMAGE_PRINTING_README.md  Kconfig  idf_component.yml
components/esp_escpos/docs/: API.md  BARCODES_AND_QR.md  IMAGE_PRINTING.md  PRINTER_COMPATIBILITY.md  README.md  RECEIPTS.md  ROADMAP.md
components/esp_escpos/examples/: README.md  barcode_example.c  beeps_example.c  columns_example.c  cut_example.c  image_example.c  qr_example.c  raw_commands_example.c  text_example.c
components/esp_escpos/examples/usb_print/: CMakeLists.txt  main.c
components/esp_escpos/include/: escpos.h  escpos_commands.h  escpos_config.h  escpos_image.h  escpos_types.h
components/esp_escpos/include/transport/: escpos_ble.h  escpos_network.h  escpos_uart.h  escpos_usb.h
components/esp_escpos/src/: escpos.c  escpos_barcode.c  escpos_commands.c  escpos_formatter.c  escpos_image.c  escpos_private.h  escpos_qr.c  escpos_utils.c
components/esp_escpos/src/transport/: escpos_usb.c
main/: CMakeLists.txt  http_server.c  http_server.h  idf_component.yml  index.html  main.c  printer.html  printer_manager.c  printer_manager.h  wifi_manager.c  wifi_manager.h  wifi_manager.html
